revamped folder structure (to follow java standarts)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "java",
             "name": "Debug",
             "request": "launch",
-            "mainClass": "src.Main"
+            "mainClass": "main.java.Main",
+            "projectName": "sorting-algorithms-visualization"
         }
     ]
 }
